# modplugMp3Conv

./: CMakeLists.txt  README.md
cmake/modules/: COPYING-CMAKE-SCRIPTS  FindPackageHandleStandardArgs.cmake  FindTaglib.cmake
resources/: libmp3lame.pc
src/: CMakeLists.txt  FileNameParser.cpp  FileNameParser.h  MP3Encoder.h  MP3EncoderFactory.cpp  MP3EncoderFactory.h  MP3EncoderLinux.cpp  MP3EncoderLinux.h  MP3EncoderWindows.cpp  MP3EncoderWindows.h  ModuleCvt.cpp  ModuleCvt.h  MpToMp3Common.cpp  MpToMp3Common.h  SoundFileWrap.cpp  SoundFileWrap.h  WaveFile.h  config.h.in  modplugtomp3.cpp  molConvert.tcl
src/externalinclude/: BladeMP3EncDLL.h
